examples/type_error/submod.js
Promise.resolve(function (f) {
    return f(0);
})
